# OS_LABS

./: CMakeLists.txt  README.md
KP/doc/: reportKP.docx
KP/src/: A.cpp  B.cpp  C.cpp  makefile  zmq_functions.h
lab1/doc/: report1.docx
lab2/: CMakeLists.txt  main.c  make
lab2/doc/: report2.docx
lab2/include/: parent.h  utils.h
lab2/src/: child.c  parent.c  utils.c
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report3.docx
lab3/include/: lab3.h
lab3/src/: l3.cpp  lab3.cpp
lab4/: CMakeLists.txt  main.c
lab4/doc/: report4.docx
lab4/include/: parent.h
lab4/src/: parent.c
lab5/: CMakeLists.txt
lab5/doc/: report5.docx
lab5/include/: lab5.h
lab5/src/: lib1.c  lib2.c  prog1.c  prog2.c
lab678/doc/: report678.docx
lab678/src/: control.cpp  counting.cpp  makefile  topology.h  zmq_functions.h
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab51_test.cpp  lab52_test.cpp
utils/: clean  make
utils/legal/: lab2.txt  lab3.txt  main
